Fix header alignment

--- a/assets/components/nav/_nav.css
+++ b/assets/components/nav/_nav.css
@@ -8,7 +8,7 @@ body {
   z-index: 10;
 
   .floating {
-    margin-top: -90px;
+    margin-top: calc(-115/16rem);
   }
 
   @media screen and (--bp-desktop) {
